# streamly-play

./: CHANGELOG.md  README.md  haskell-streamly-tutorial.cabal
app/: WordCount.hs  WordCountMain.hs
