cabal-version:      2.4
name:               streamly-play
version:            0.1.0.0
author:             David Sánchez
maintainer:         david.sanchez.lt@gmail.com
extra-source-files: CHANGELOG.md

executable streamly-play-wc
    main-is:          WordCountMain.hs
    other-modules:    WordCount
    build-depends:
        base,
        streamly

    hs-source-dirs:   app
    default-language: Haskell2010

executable streamly-play-server
    main-is:          ServerMain.hs
    -- other-modules:    
    build-depends:
        base,
        streamly

    hs-source-dirs:   app
    default-language: Haskell2010
